--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,16 @@
 .contain{
   padding-left: 30px;
   padding-right: 30px;
-    
+
 }
 .header{
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 5px;
-    background: white;
-    border-bottom: .0625rem solid #e0e0e0;}
+    background:black;
+    border-bottom: .0625rem solid #e0e0e0;
+  }
 
 
 .logo{
@@ -24,14 +25,18 @@
 .title{
     font-size:25px;
     font-weight: bold;
+    color: white; 
 
 }
-.bg1{
-  background: red;
-  align-items:center;
-justify-content: center;
+.text{
+  font-size:25px;
+  padding-left:80px
+
 }
 
+a{
+  text-decoration: none;
+}
 ul {
   
     margin: 0;
@@ -55,12 +60,11 @@ ul {
     display: inline;
     
   }
-  .content{
-    
-    display:grid;
-    align-items:center;
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-
+    
   }
  
   img {
@@ -81,7 +85,6 @@ ul {
 
   }
 .footer {
- 
     width: 100%;
     height: 100%;
  background-color: black;
@@ -93,13 +96,14 @@ ul {
 
  .fa {
     padding: 20px;
-    font-size: 30px;
-    width: 50px;
+    font-size: 20px;
+    width: 20px;
     text-align: center;
     text-decoration: none;
-    margin: 5px;
+    margin: 10px;
     border-radius: 50%;
   }
+
   .fa-facebook {
     background: #3B5998;
     color: white;
